# iris_rust

./: Cargo.toml  notes.md
assets/keys/: id_ed25519.pub
src/: lib.rs
src/apps/: companion.rs  display.rs  file_manager.rs  gps.rs  mod.rs  power.rs  radar.rs  ssh.rs  usb.rs
