[package]
edition      = "2024"
name         = "iris"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "iris"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp32s3 = "0.34.0"
embedded-sdmmc = "0.9.0"
embedded-hal-bus = "0.3.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
